Fixed spacing for desktop versions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@
 
 #contactText{
     padding-top: 5%;
-    margin-top: -10%;
+    margin-top: 20%;
 }
 
 #aboutMe{
